# nyc-nightscape

./: .gitignore  Makefile  environment.yml  pyproject.toml
configs/: params.yml  params_legacy.yml
data/processed/equity/: noise_inequality_indices.csv
data/processed/geo/: cd59.geojson  cd59.parquet  cd59_epsg2263.geojson  cd59_epsg2263.parquet  cd_lookup.csv  cd_lookup.parquet  nta.parquet  nta_epsg2263.parquet  nta_lookup.csv  nta_lookup.parquet  nyc_tracts.parquet
data/processed/reports/: ahv_permits_cd.csv  borough_summary_table.csv  chs_cd_estimates.csv  cleaned_311_rates_cd.csv  (+33 more)
outputs/interactive/: atlas.html  bivariate.html  findings.html  profiles.html  typologies.html
scripts/: 01_migrate_data.py  10_collect_crashes.py  11_collect_311_all.py  12_collect_fdny.py  13_collect_streetlights.py  14_collect_mta_turnstiles.py  20_collect_tlc_trips.py  21_collect_arrests.py  22_collect_citibike.py  24_collect_film_permits.py  26_collect_restaurants.py  27_collect_commercial_waste.py  31_collect_energy_benchmarking.py  32_extract_helicopter_noise.py  33_collect_mta_gtfs.py  34_collect_linknyc.py  35_collect_ems_response_times.py  50_build_master_nightscape.py  51_correlation_matrix.py  52_demographic_gradients.py  53_neighborhood_typologies.py  54_composite_index.py  55_regression_models.py  56_lisa_hotspots.py  60_data_quality_report.py  70_build_atlas.py  71_build_profiles.py  72_build_bivariate_maps.py  73_build_typology_page.py  74_build_findings.py
src/nightscape/: __init__.py  hashing.py  io_utils.py  logging_utils.py  paths.py  qa.py  schemas.py
